--- a/study_code/b_step_03/html/a_content.html
+++ b/study_code/b_step_03/html/a_content.html
@@ -22,6 +22,7 @@
         <li><a href="./b_07_js_condition3.html">if</a></li>
         <li><a href="./b_08_js_repeat1.html">반복문 1 - while, do-while</a></li>
         <li><a href="./b_09_js_copy.html">copy 및 기타 등등</a></li>
+        <li><a href="./b_13_js_constructor_function.html">생성자 함수</a></li>
       </ul>
     </section>
   </div>
