--- a/study_code/b_step_03/html/b_13_js_constructor_function.html
+++ b/study_code/b_step_03/html/b_13_js_constructor_function.html
@@ -15,6 +15,8 @@
     <li>list_04</li>
     <li>list_05</li>
   </ul>
+
+  <button id="btn">버튼클릭</button>
   <!-- script -->
   <script src="../js/src/b_13_js_constructor_funtion.js"></script>
 </body>
