--- a/study_code/b_step_03/html/a_content.html
+++ b/study_code/b_step_03/html/a_content.html
@@ -24,6 +24,7 @@
         <li><a href="./b_09_js_copy.html">copy 및 기타 등등</a></li>
         <li><a href="./b_13_js_constructor_function.html">생성자 함수</a></li>
         <li><a href="./b_14_js_json_1.html">json 문서처리1</a></li>
+        <li><a href="./b_15_js_import_data.html">외부 문서 불러오기</a></li>
       </ul>
     </section>
   </div>
