--- a/study_code/b_step_03/html/b_15_js_import_data.html
+++ b/study_code/b_step_03/html/b_15_js_import_data.html
@@ -18,6 +18,7 @@
   <!-- script -->
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <!-- <script src="../js/src/b_15_js_import_data-for-jQuery.js"></script> -->
-  <script src="../js/src/b_15_js_import_data.js"></script>
+  <!-- <script src="../js/src/b_15_js_import_data.js"></script> -->
+  <script src="../js/src/b_15_js_import_data-stateCheck.js"></script>
 </body>
 </html>
