--- a/study_code/b_step_03/html/a_content.html
+++ b/study_code/b_step_03/html/a_content.html
@@ -27,6 +27,17 @@
         <li><a href="./b_15_js_import_data.html">외부 문서 불러오기</a></li>
       </ul>
     </section>
+    <section class="part">
+      <h2><abbr title="Document Object Model">DOM</abbr></h2>
+      <p>
+        BOM(borwser object model)영역과 다른 부분으로, 실제 화면에 구현되는,
+        HTML, CSS로 디자인하는 화면부를 Document라고 불리우며
+        이를 JS로 제어하는 것을 DOM으로 부른다.
+      </p>
+      <ul>
+        <li><a href="./c_01_dom_sample_01.html">dom 구축 샘플링</a></li>
+      </ul>
+    </section>
   </div>
 </body>
 </html>
