--- a/study_code/b_step_03/html/c_01_dom_sample_01.html
+++ b/study_code/b_step_03/html/c_01_dom_sample_01.html
@@ -45,6 +45,11 @@
       </div>
     </div>
   </nav>
+  <div class="box">
+    <a href="http:naver.com">버튼</a>
+  </div>
+
+
   <!-- script -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="../js/src/c_01_dom_sample_01.js"></script>
