--- a/study_code/b_step_03/html/b_16_js_remind_02.html
+++ b/study_code/b_step_03/html/b_16_js_remind_02.html
@@ -6,12 +6,18 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <style>
+    #contentBox {height: 30rem; background-color: #adf;}
+  </style>
 </head>
 <body>
   <!-- layout -->
   <div id="wrap">
     <h1><a href="./a_content.html">웹기초 - js</a></h1>
-    <article id="contentBox"></article>
+    <article id="contentBox">
+      <button type="button" class="btn">start</button>
+      <p>count : <span></span></p>
+    </article>
   </div>
   <!-- script -->
   <script src="../js/src/b_16_js_remind_02.js"></script>
