--- a/study_code/b_step_03/html/a_content.html
+++ b/study_code/b_step_03/html/a_content.html
@@ -38,7 +38,8 @@
       <ul>
         <li><a href="./c_01_dom_sample_01.html">dom 구축 샘플링</a></li>
         <li><a href="./c_02_dom_make_nav_01.html">header영역 구축</a></li>
-        <li><a href="./c_03_dom_check_restore_01.html">이전내용 복슴 겸 정리</a></li>
+        <li><a href="./c_03_dom_check_restore_01.html">이전내용 복습 겸 정리</a></li>
+        <li><a href="./c_04_dom_blind_btn.html">블라인드 형식의 슬라이드 버튼</a></li>
       </ul>
     </section>
   </div>
