--- a/study_code/b_step_03/html/c_04_dom_blind_btn.html
+++ b/study_code/b_step_03/html/c_04_dom_blind_btn.html
@@ -19,8 +19,8 @@
     <article id="contentBox">
       <h2>버튼 클릭시 내용 나타나게 만들기</h2>
       <div class="btn">
-        <button type="button" class="open">open</button>
         <button type="button" class="close">close</button>
+        <button type="button" class="open">open</button>
         <button type="button" class="open2">open2</button>
       </div>
       <div class="content_area">
@@ -36,6 +36,7 @@
   </div>
   <!-- script -->
   <script src="//code.jquery.com/jquery-3.6.0.min.js"></script>
-  <script src="../js/src/c_04_dom_blind_btn.js"></script>
+  <!-- <script src="../js/src/c_04_dom_blind_btn.js"></script> -->
+  <script src="../js/src/c_04_dom_blind_btn_02.js"></script>
 </body>
 </html>
