--- a/study_code/b_step_03/html/a_content.html
+++ b/study_code/b_step_03/html/a_content.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="../css/src/a_content.css">
   <title>Document</title>
 </head>
 <body>
@@ -42,6 +43,7 @@
         <li><a href="./c_04_dom_blind_btn.html">블라인드 형식의 슬라이드 버튼</a></li>
         <li><a href="./c_05_dom_sample_02.html">광고슬라이드 샘플링</a></li>
         <li><a href="./c_06_dom_sample_03.html">탭메뉴 샘플링</a></li>
+        <li><a href="./c_07_dom_selector_01.html">js 선택자 이해하기</a></li>
       </ul>
     </section>
   </div>
