--- a/study_code/b_step_03/html/c_08_dom_fade_btn.html
+++ b/study_code/b_step_03/html/c_08_dom_fade_btn.html
@@ -53,7 +53,9 @@
       <div class="new_area_modal">
         <h4>new modal</h4>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad, accusantium!</p>
-        <div class="close_btn"><button type="button">닫기</button></div>
+        <div class="close_btn">
+          <button type="button">닫기</button>
+        </div>
       </div>
     </article>
   </div>
