--- a/study_code/b_step_03/html/a_content.html
+++ b/study_code/b_step_03/html/a_content.html
@@ -46,6 +46,16 @@
         <li><a href="./c_07_dom_selector_01.html">js 선택자 이해하기</a></li>
         <li><a href="./c_08_dom_fade_btn.html">fadeIn, fadeOut 기능을 가진 버튼</a></li>
         <li><a href="./c_09_dom_tab_menu.html">탭메뉴 js 구현</a></li>
+        <li><a href="./c_10_dom_tab_menu2.html">탭메뉴 js 구현2</a></li>
+      </ul>
+    </section>
+    <section class="part">
+      <h2>실습</h2>
+      <p>
+        내가 혼자 실습하는 파일들
+      </p>
+      <ul>
+        <li><a href="./z_01_practice_event_modal.html">선생님 figma파일 event_design</a></li>
       </ul>
     </section>
   </div>
