--- a/study_code/b_step_03/html/c_10_dom_tab_menu2.html
+++ b/study_code/b_step_03/html/c_10_dom_tab_menu2.html
@@ -44,7 +44,20 @@
             <h3>2021년도 이벤트</h3>
             <ul class="event_particle">
               <li>event_01(제목, 내용, 기간, 진행여부, 배경이미지, 불러올 링크 data)</li>
-              <li>event_02</li>
+              <li>
+                <button type="button" data-import="../event/y21042_data.json" id="event_21042">
+                  <h4 class="event_title">summer flaver</h4>
+                  <p class="evetn_narration">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Placeat, beatae.</p>
+                  <dl class="date">
+                    <dt class="blind">기간</dt>
+                    <dd>2122. 01. 05 - 2022. 02. 15</dd>
+                  </dl>
+                  <dl class="event_check success">
+                    <dt>이벤트 진행 상태</dt>
+                    <dd>이벤트 종료</dd>
+                  </dl>
+                </button>
+              </li>
               <li>event_03</li>
               <li>event_04</li>
               <li>event_05</li>
@@ -92,5 +105,6 @@
 
   <!-- script -->
   <script src="../js/src/c_10_dom_tab_menu2.js"></script>
+  <script src="../js/src/c_10_dom_tab_menu2-1.js"></script>
 </body>
 </html>
