--- a/study_code/b_step_03/html/a_content.html
+++ b/study_code/b_step_03/html/a_content.html
@@ -47,6 +47,7 @@
         <li><a href="./c_08_dom_fade_btn.html">fadeIn, fadeOut 기능을 가진 버튼</a></li>
         <li><a href="./c_09_dom_tab_menu.html">탭메뉴 js 구현</a></li>
         <li><a href="./c_10_dom_tab_menu2.html">탭메뉴 js 구현2</a></li>
+        <li><a href="./c_11_dom_insert_data.html">별도의 객체 처리된 data dom으로 처리하기</a></li>
       </ul>
     </section>
     <section class="part">
