--- a/study_code/b_step_03/html/c_10_dom_tab_menu2.html
+++ b/study_code/b_step_03/html/c_10_dom_tab_menu2.html
@@ -61,7 +61,7 @@
               <li>event_03</li>
               <li>event_04</li>
               <li>event_05</li>
-            </ul>
+            </ul>-->
           </div>
           <div class="year_part">
             <h3>2020년도 이벤트</h3>
@@ -81,7 +81,7 @@
               <li>event_03</li>
               <li>event_04</li>
               <li>event_05</li>
-            </ul> -->
+            </ul> 
           </div>
           <div class="year_part">
             <h3>2018년도 이벤트</h3>
@@ -114,7 +114,8 @@
   </div> -->
 
   <!-- script -->
+  <script src="../js/src/c_10_dom_tab_menu2-2.js"></script>
   <script src="../js/src/c_10_dom_tab_menu2.js"></script>
-  <script src="../js/src/c_10_dom_tab_menu2-1.js"></script>
+  <!-- <script src="../js/src/c_10_dom_tab_menu2-1.js"></script> -->
 </body>
 </html>
