--- a/study_code/b_step_03/html/c_10_dom_tab_menu2.html
+++ b/study_code/b_step_03/html/c_10_dom_tab_menu2.html
@@ -114,8 +114,12 @@
   </div> -->
 
   <!-- script -->
-  <script src="../js/src/c_10_dom_tab_menu2-2.js"></script>
-  <script src="../js/src/c_10_dom_tab_menu2.js"></script>
   <!-- <script src="../js/src/c_10_dom_tab_menu2-1.js"></script> -->
+  <!-- json 이용한 data 처리 -->
+  <script src="../js/src/c_10_dom_tab_menu2-2.js"></script>
+  <!-- tab-menu(연도) -->
+  <script src="../js/src/c_10_dom_tab_menu2.js"></script>
+  <!-- modal-window -->
+  <script src="../js/src/c_10_dom_modal.js"></script>
 </body>
 </html>
